[gd_scene load_steps=10 format=2]

[ext_resource path="res://Board.gd" type="Script" id=1]
[ext_resource path="res://monsters/mudcrawler/Mudcrawler.tscn" type="PackedScene" id=2]
[ext_resource path="res://Node2D.gd" type="Script" id=3]
[ext_resource path="res://background.jpg" type="Texture" id=4]
[ext_resource path="res://Background.gd" type="Script" id=5]

[sub_resource type="PackedScene" id=1]
_bundled = {
"conn_count": 0,
"conns": PoolIntArray(  ),
"editable_instances": [  ],
"names": PoolStringArray(  ),
"node_count": 0,
"node_paths": [  ],
"nodes": PoolIntArray(  ),
"variants": [  ],
"version": 2
}

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Arial.ttf"

[sub_resource type="DynamicFont" id=3]
size = 43
font_data = SubResource( 2 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 30.4037, 348.825 )

[node name="HUD" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
mudcrawler = ExtResource( 2 )
label = SubResource( 1 )

[node name="ButtonTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Background" type="Node2D" parent="."]
script = ExtResource( 5 )
texture = ExtResource( 4 )

[node name="Grid" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Button" type="Button" parent="."]
margin_left = 577.632
margin_top = 10.1623
margin_right = 747.632
margin_bottom = 70.1623
custom_fonts/font = SubResource( 3 )
text = "Attacca"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MonsterContainer" type="Node" parent="."]

[node name="Border1" type="Area2D" parent="." groups=[
"borders",
]]
position = Vector2( 1303.99, 350 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Border1"]
shape = SubResource( 4 )

[node name="Border2" type="Area2D" parent="."]
position = Vector2( 0, 350 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Border2"]
shape = SubResource( 4 )
[connection signal="timeout" from="ButtonTimer" to="." method="_on_ButtonTimer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
